--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<span class="logo-span">Web</span>Studio
 					</a>
 					<ul class="site-nav list">
-						<li class="item page-studio"><a href="./" class="link">Studio</a></li>
+						<li class="item page-studio"><a href="./" class="link active">Studio</a></li>
 						<li class="item"><a href="./portfolio.html" class="link">Portfolio</a></li>
 						<li class="item"><a href="" class="link">Contacts</a></li>
 					</ul>
