--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 					</a>
 					<ul class="site-nav list">
 						<li class="item"><a href="./index.html" class="link">Studio</a></li>
-						<li class="item page-portfolio"><a href="./portfolio.html" class="link">Portfolio</a></li>
+						<li class="item page-portfolio"><a href="./portfolio.html" class="link active">Portfolio</a></li>
 						<li class="item"><a href="" class="link">Contacts</a></li>
 					</ul>
 				</div>
